--- a/assets/images.css
+++ b/assets/images.css
@@ -17,7 +17,7 @@
   padding-top: var(--padding-top-mobile);
 }
 
-.header-transparent ~ main .images__container--padding-top {
+.header-transparent ~ main .images:first-child .images__container--padding-top {
   padding-top: calc(var(--padding-top-mobile) + var(--header-height, 110px) - var(--top-bar-height, 0px));
 }
 
@@ -210,7 +210,7 @@
     padding-top: var(--padding-top);
   }
 
-  .header-transparent ~ main .images__container--padding-top {
+  .header-transparent ~ main .images:first-child .images__container--padding-top {
     padding-top: calc(var(--padding-top) + var(--header-height, 110px) - var(--top-bar-height, 0px));
   }
 
