--- a/sections/collections.liquid
+++ b/sections/collections.liquid
@@ -5,12 +5,15 @@
   {%- assign color_palette         = section.settings.color_palette -%}
   {%- assign counter_label         = section.settings.counter_label -%}
   {%- assign grid                  = section.settings.grid -%}
+  {%- assign overlay_opacity       = section.settings.overlay_opacity -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
   {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
+  {%- assign rounded_corners       = section.settings.rounded_corners -%}
   {%- assign show_amount           = section.settings.show_amount -%}
   {%- assign show_arrow            = section.settings.show_arrow -%}
+  {%- assign show_overlay          = section.settings.show_overlay -%}
   {%- assign spacing               = section.settings.spacing -%}
   {%- assign spacing_mobile        = section.settings.spacing_mobile -%}
   {%- assign image_placeholder     = settings.image_placeholder -%}
@@ -19,7 +22,8 @@
   {%- capture variables -%}
     {%- case padding_top -%}
       {%- when 'none' -%}
-        --padding-top: 0;
+        --padding-top: 1px;
+        --margin-top: -1px;
       {%- when 'small' -%}
         --padding-top: 24px;
       {%- when 'medium' -%}
@@ -41,7 +45,8 @@
 
     {%- case padding_top_mobile -%}
       {%- when 'none' -%}
-        --padding-top-mobile: 0;
+        --padding-top-mobile: 1px;
+        --margin-top-mobile: -1px;
       {%- when 'small' -%}
         --padding-top-mobile: 18px;
       {%- when 'medium' -%}
@@ -91,11 +96,26 @@
       {%- when 'large' -%}
         --grid-gap-mobile: 32px;
     {%- endcase -%}
+
+    {%- case rounded_corners -%}
+      {%- when 'none' -%}
+        --border-radius-rounded-blocks: 0px;
+      {%- when 'small' -%}
+        --border-radius-rounded-blocks: 8px;
+      {%- when 'medium' -%}
+        --border-radius-rounded-blocks: 16px;
+      {%- when 'large' -%}
+        --border-radius-rounded-blocks: 32px;
+    {%- endcase -%}
+
+    {%- if show_overlay -%}
+      --opacity-overlay: {{ overlay_opacity | append: "%"}};
+    {%- endif -%}
   {%- endcapture -%}
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="collections__wrapper palette-{{ color_palette }}{% if padding_top != blank or padding_top_mobile != blank %} collections__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} collections__wrapper--padding-bottom{%- endif -%}"
+    class="collections__wrapper collections__wrapper-{{ grid }} palette-{{ color_palette }}{% if show_overlay != blank %} collection__wrapper--with-overlay{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} collections__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} collections__wrapper--padding-bottom{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="collections__container container">
@@ -121,18 +141,6 @@
       {
         "type": "header",
         "content": "General settings"
-      },
-      {
-        "type": "checkbox",
-        "id": "show_amount",
-        "label": "Show product amount",
-        "default": true
-      },
-      {
-        "type": "checkbox",
-        "id": "show_arrow",
-        "label": "Show arrow on hover",
-        "default": true
       },
       {
         "type": "select",
@@ -163,15 +171,65 @@
         "default": "one"
       },
       {
-        "type": "header",
-        "content": "Translations"
+        "type": "select",
+        "id": "rounded_corners",
+        "label": "Rounded corners",
+        "options": [
+          {
+            "value": "none",
+            "label": "None"
+          },
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "large",
+            "label": "Large"
+          }
+        ],
+        "default": "none"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_arrow",
+        "label": "Show arrow on hover",
+        "default": true
+      },
+      {
+        "type": "checkbox",
+        "id": "show_amount",
+        "label": "Show product amount",
+        "default": true
       },
       {
         "type": "text",
         "id": "counter_label",
-        "label": "Counter label",
+        "label": "Product amount labels",
         "default": "Item, Items",
         "info": "Please indicate singular and plural by comma"
+      },
+      {
+        "type": "header",
+        "content": "Overlay"
+      },
+      {
+        "type": "checkbox",
+        "id": "show_overlay",
+        "label": "Show overlay",
+        "default": true
+      },
+      {
+        "type": "number",
+        "id": "overlay_opacity",
+        "label": "Overlay percentage",
+        "min": 0,
+        "max": 100,
+        "default": 100
       },
       {
         "type": "header",
