--- a/assets/testimonials.css
+++ b/assets/testimonials.css
@@ -1,5 +1,10 @@
 .testimonials__wrapper--padding-top {
   padding-top: var(--padding-top-mobile);
+  margin-top: var(--margin-top-mobile, 0px);
+}
+
+.header-transparent ~ main .testimonials:first-child .testimonials__wrapper--padding-top {
+  padding-top: calc(var(--padding-top-mobile) + var(--header-height, 110px) - var(--top-bar-height, 0px));
 }
 
 .testimonials__wrapper--padding-bottom {
@@ -7,117 +12,258 @@
 }
 
 .testimonials__title {
-  margin: 0 0 16px;
+  margin: 0 0 50px;
+  font-size: 40px;
 }
 
-.testimonials__stars {
-  padding: 0 0 40px;
-}
-
-.testimonials__star {
-  margin: 0 4px 0 0;
-  display: inline-block;
-  vertical-align: top;
+.testimonials__content {
+  padding: 32px;
+  font-size: 20px;
 }
 
 .testimonials__blockquote {
   font-weight: var(--font-weight-light);
   letter-spacing: -0.003em;
-  padding-bottom: var(--padding-text);
+  padding-bottom: 0;
+}
+
+.testimonials__quote {
+  padding: 0 0 112px;
+  display: block;
 }
 
 .testimonials__quote p {
   display: initial;
 }
 
+.testimonials__image-wrapper {
+  flex: 0 0 48px;
+}
+
+.testimonials__image {
+  border: 1px solid transparent;
+  border-radius: var(--border-radius-circle);
+  width: 48px;
+  height: 48px;
+}
+
+.testimonials__blockquote footer {
+  display: flex;
+}
+
 .testimonials__cite {
   display: flex;
   flex-direction: column;
-  align-items: var(--align-items, flex-start);
-  font-size: 20px;
-  font-weight: var(--font-weight-semibold);
-  padding: 24px 0 0;
+  align-items: flex-start;
+  font-size: 18px;
+  font-weight: var(--font-weight-extrabold);
+  font-style: normal;
+}
+
+.testimonials__image-wrapper + .testimonials__cite {
+  padding: 0 0 0 20px;
 }
 
 .testimonials__small {
   font-size: 16px;
   font-weight: var(--font-weight-regular);
-  font-style: normal;
+  opacity: 0.5;
 }
 
-.testimonials__image-wrapper {
-  padding-bottom: var(--padding-image);
+.testimonials__button {
+  margin: 23px 0 0;
 }
 
-.testimonials__image {
-  margin: 0 auto;
+.testimonials .carousel--controls .carousel__wrapper {
+  padding: 0;
 }
 
-.testimonials__content {
-  display: flex;
-  flex-direction: var(--flex-direction-mobile);
-  margin: 0 -24px;
-}
-
-.testimonials__col {
-  width: 100%;
-  padding: 0 24px;
+.testimonials .carousel .carousel__navigation {
+  display: none;
 }
 
 .palette-one.testimonials__wrapper {
   background: var(--background-primary-1);
 }
 
-.palette-one .testimonials__blockquote {
-  color: var(--color-third-1);
+.palette-one .testimonials__content {
+  color: var(--color-accent-1);
+  background: var(--background-accent-1);
 }
 
-.palette-one .testimonials__cite {
-  color: var(--color-primary-1);
+.palette-one .button.testimonials__button {
+  border-color: var(--color-accent-1);
 }
 
-.palette-one .testimonials__small {
-  color: var(--color-secondary-1);
+.palette-one .testimonials__image {
+  border-color: var(--color-accent-1);
 }
 
 .palette-two.testimonials__wrapper {
   background: var(--background-primary-2);
 }
 
-.palette-two .testimonials__blockquote {
-  color: var(--color-third-2);
+.palette-two .testimonials__content {
+  color: var(--color-accent-2);
+  background: var(--background-accent-2);
 }
 
-.palette-two .testimonials__cite {
-  color: var(--color-primary-2);
+.palette-two .button.testimonials__button {
+  border-color: var(--color-accent-2);
 }
 
-.palette-two .testimonials__small {
-  color: var(--color-secondary-2);
+.palette-two .testimonials__image {
+  border-color: var(--color-accent-2);
+}
+
+.palette-three.testimonials__wrapper {
+  background: var(--background-primary-3);
+}
+
+.palette-three .testimonials__content {
+  color: var(--color-accent-3);
+  background: var(--background-accent-3);
+}
+
+.palette-three .button.testimonials__button {
+  border-color: var(--color-accent-3);
+}
+
+.palette-three .testimonials__image {
+  border-color: var(--color-accent-3);
+}
+
+.palette-four.testimonials__wrapper {
+  background: var(--background-primary-4);
+}
+
+.palette-four .testimonials__content {
+  color: var(--color-accent-4);
+  background: var(--background-accent-4);
+}
+
+.palette-four .button.testimonials__button {
+  border-color: var(--color-accent-4);
+}
+
+.palette-four .testimonials__image {
+  border-color: var(--color-accent-4);
+}
+
+.palette-five.testimonials__wrapper {
+  background: var(--background-primary-5);
+}
+
+.palette-five .testimonials__content {
+  color: var(--color-accent-5);
+  background: var(--background-accent-5);
+}
+
+.palette-five .button.testimonials__button {
+  border-color: var(--color-accent-5);
+}
+
+.palette-five .testimonials__image {
+  border-color: var(--color-accent-5);
 }
 
 @media (min-width: 992px) {
   .testimonials__wrapper--padding-top {
     padding-top: var(--padding-top);
+    margin-top: var(--margin-top, 0px);
+  }
+
+  .header-transparent ~ main .testimonials:first-child .testimonials__wrapper--padding-top {
+    padding-top: calc(var(--padding-top) + var(--header-height, 110px) - var(--top-bar-height, 0px));
   }
 
   .testimonials__wrapper--padding-bottom {
     padding-bottom: var(--padding-bottom);
   }
 
-  .testimonials__col:not(:only-child) .testimonials__title {
-    margin-top: 16px;
+  .testimonials__container {
+    display: flex;
   }
 
-  .testimonials__blockquote {
-    padding: 0;
+  .testimonials__title {
+    flex: 0 0 var(--title-max-width);
+    font-size: var(--font-size-h2);
+    margin: 0 32px 0 0;
+    max-width: var(--title-max-width);
   }
 
-  .testimonials__content {
-    flex-direction: var(--flex-direction);
+  .testimonials__wrapper .carousel {
+    flex: 1 1 auto;
+    padding: 0 40px;
+    width: calc(100% - var(--title-max-width) + var(--horizontal-padding-mobile) + 8px);
+    position: relative;
   }
 
-  .testimonials__image-wrapper {
-    padding-bottom: 0;
+  .testimonials__wrapper .carousel::before,
+  .testimonials__wrapper .carousel::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: -4px;
+    bottom: -4px;
+    width: 62px;
+    z-index: 1;
+  }
+
+  .testimonials__wrapper .carousel::after {
+    left: auto;
+    right: 0;
+  }
+
+  .testimonials .carousel .carousel__navigation {
+    display: flex;
+    right: auto;
+    left: 0;
+  }
+
+  .palette-one.testimonials__wrapper .carousel::before {
+    background: linear-gradient(90deg, var(--background-primary-1) 42.92%, var(--background-primary-1-00) 95%);
+  }
+
+  .palette-one.testimonials__wrapper .carousel::after {
+    background: linear-gradient(-90deg, var(--background-primary-1) 42.92%, var(--background-primary-1-00) 95%);
+  }
+
+  .palette-two.testimonials__wrapper .carousel::before {
+    background: linear-gradient(90deg, var(--background-primary-2) 42.92%, var(--background-primary-2-00) 95%);
+  }
+
+  .palette-two.testimonials__wrapper .carousel::after {
+    background: linear-gradient(-90deg, var(--background-primary-2) 42.92%, var(--background-primary-2-00) 95%);
+  }
+
+  .palette-three.testimonials__wrapper .carousel::before {
+    background: linear-gradient(90deg, var(--background-primary-3) 42.92%, var(--background-primary-3-00) 95%);
+  }
+
+  .palette-three.testimonials__wrapper .carousel::after {
+    background: linear-gradient(-90deg, var(--background-primary-3) 42.92%, var(--background-primary-3-00) 95%);
+  }
+
+  .palette-four.testimonials__wrapper .carousel::before {
+    background: linear-gradient(90deg, var(--background-primary-4) 42.92%, var(--background-primary-4-00) 95%);
+  }
+
+  .palette-four.testimonials__wrapper .carousel::after {
+    background: linear-gradient(-90deg, var(--background-primary-4) 42.92%, var(--background-primary-4-00) 95%);
+  }
+
+  .palette-five.testimonials__wrapper .carousel::before {
+    background: linear-gradient(90deg, var(--background-primary-5) 42.92%, var(--background-primary-5-00) 95%);
+  }
+
+  .palette-five.testimonials__wrapper .carousel::after {
+    background: linear-gradient(-90deg, var(--background-primary-5) 42.92%, var(--background-primary-5-00) 95%);
+  }
+}
+
+@media (min-width: 1200px) {
+  .testimonials__wrapper .carousel {
+    width: calc(100% - var(--title-max-width) + var(--horizontal-padding) + 8px);
   }
 }
