--- a/sections/testimonials.liquid
+++ b/sections/testimonials.liquid
@@ -4,15 +4,15 @@
 
   {{ "testimonials.css" | asset_url | stylesheet_tag }}
 
+  {%- assign title                 = section.settings.title -%}
+  {%- assign image_bg              = section.settings.image_bg -%}
+  {%- assign rounded_corners       = section.settings.rounded_corners -%}
   {%- assign show_navigation       = section.settings.show_navigation -%}
-  {%- assign show_pagination       = section.settings.show_pagination -%}
   {%- assign color_palette         = section.settings.color_palette -%}
   {%- assign padding_top           = section.settings.padding_top -%}
   {%- assign padding_bottom        = section.settings.padding_bottom -%}
   {%- assign padding_top_mobile    = section.settings.padding_top_mobile -%}
   {%- assign padding_bottom_mobile = section.settings.padding_bottom_mobile -%}
-  {%- assign timer                 = section.settings.timer -%}
-  {%- assign image_position        = section.settings.image_position -%}
 
   {%- assign carousel = false -%}
 
@@ -25,17 +25,18 @@
   {% comment %} CSS variables start {% endcomment %}
   {%- capture variables -%}
     {%- if carousel -%}
-      --slide-width: 100%;
-      --slide-width-mobile: 100%;
+      --slide-width: 351px;
+      --slide-width-mobile: 364px;
     {%- endif -%}
 
     {%- case padding_top -%}
       {%- when 'none' -%}
-        --padding-top: 0;
+        --padding-top: 1px;
+        --margin-top: -1px;
       {%- when 'small' -%}
-        --padding-top: 24px;
+        --padding-top: 40px;
       {%- when 'medium' -%}
-        --padding-top: 68px;
+        --padding-top: 80px;
       {%- when 'large' -%}
         --padding-top: 112px;
     {%- endcase -%}
@@ -44,20 +45,21 @@
       {%- when 'none' -%}
         --padding-bottom: 0;
       {%- when 'small' -%}
-        --padding-bottom: 24px;
+        --padding-bottom: 40px;
       {%- when 'medium' -%}
-        --padding-bottom: 68px;
+        --padding-bottom: 80px;
       {%- when 'large' -%}
         --padding-bottom: 112px;
     {%- endcase -%}
 
     {%- case padding_top_mobile -%}
       {%- when 'none' -%}
-        --padding-top-mobile: 0;
+        --padding-top-mobile: 1px;
+        --margin-top-mobile: -1px;
       {%- when 'small' -%}
-        --padding-top-mobile: 18px;
+        --padding-top-mobile: 16px;
       {%- when 'medium' -%}
-        --padding-top-mobile: 40px;
+        --padding-top-mobile: 32px;
       {%- when 'large' -%}
         --padding-top-mobile: 60px;
     {%- endcase -%}
@@ -66,116 +68,89 @@
       {%- when 'none' -%}
         --padding-bottom-mobile: 0;
       {%- when 'small' -%}
-        --padding-bottom-mobile: 18px;
+        --padding-bottom-mobile: 16px;
       {%- when 'medium' -%}
-        --padding-bottom-mobile: 40px;
+        --padding-bottom-mobile: 32px;
       {%- when 'large' -%}
         --padding-bottom-mobile: 60px;
     {%- endcase -%}
 
-    {%- case image_position -%}
-      {%- when 'left' -%}
-        --flex-direction-mobile: column-reverse;
-        --flex-direction: row-reverse;
-        --padding-text: 0;
-        --padding-image: 48px;
-        --align-items: flex-end;
-      {%- when 'right' -%}
-        --flex-direction-mobile: column;
-        --flex-direction: row;
-        --padding-text: 48px;
-        --padding-image: 0;
-        --align-items: flex-start;
-      {%- endcase -%}
+    {%- case rounded_corners -%}
+      {%- when 'none' -%}
+        --border-radius-rounded-blocks: 0px;
+      {%- when 'small' -%}
+        --border-radius-rounded-blocks: 8px;
+      {%- when 'medium' -%}
+        --border-radius-rounded-blocks: 16px;
+      {%- when 'large' -%}
+        --border-radius-rounded-blocks: 32px;
+    {%- endcase -%}
   {%- endcapture -%}
   {% comment %} CSS variables end {% endcomment %}
 
   <div
-    class="testimonials__wrapper{% if color_palette != blank %} palette-{{ color_palette }}{% endif %}{% if padding_top != blank or padding_top_mobile != blank %} testimonials__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} testimonials__wrapper--padding-bottom{%- endif -%}"
+    class="testimonials__wrapper palette-{{ color_palette }}{% if padding_top != blank or padding_top_mobile != blank %} testimonials__wrapper--padding-top{% endif %}{% if padding_bottom != blank or padding_bottom_mobile != blank %} testimonials__wrapper--padding-bottom{%- endif -%}"
     style="{{- variables | escape -}}"
   >
     <div class="testimonials__container container">
+      {%- if title != blank -%}
+        <h2 class="testimonials__title">{{- title -}}</h2>
+      {%- endif -%}
+
       {%- if carousel -%}
-        <div class="carousel carousel__full-width carousel__pause{% if show_navigation %} carousel--controls{%- endif -%}" aria-label="Gallery">
-          <input class="carousel__timer" type="hidden" name="hidden" value="{{- timer -}}">
+        <div class="carousel{% if show_navigation %} carousel--controls{%- endif -%}" aria-role="Gallery">
           <div class="carousel__wrapper">
       {%- endif -%}
 
             {%- for block in blocks -%}
               {%- assign image       = block.settings.image -%}
-              {%- assign title       = block.settings.title -%}
               {%- assign description = block.settings.description -%}
               {%- assign name        = block.settings.name -%}
               {%- assign position    = block.settings.position -%}
-              {%- assign stars       = block.settings.stars -%}
+              {%- assign button      = block.settings.button -%}
+              {%- assign button_url  = block.settings.button_url -%}
 
               {%- if carousel -%}
                 <div class="carousel__item">
                   <div class="carousel__inner">
               {%- endif -%}
-                    <div class="testimonials__content">
-                      {%- if title != blank or description != blank -%}
-                        <div class="testimonials__col">
-                          {%- if title != blank -%}
-                            <h2 class="testimonials__title">
-                              {{- title -}}
-                            </h2>
-                          {%- endif -%}
+                    {%- if description != blank -%}
+                      <div class="testimonials__content">
+                        <blockquote class="testimonials__blockquote text-medium">
+                          <q class="testimonials__quote bq-content rx-content">
+                            {{- description -}}
+                          </q>
 
-                          {%- if stars -%}
-                            {%- assign stars_full = stars -%}
-                            {%- assign stars_empty = stars | plus: 1 -%}
-
-                            <div class="testimonials__stars">
-                              {%- for i in (1..stars_full) -%}
-                                <span class="testimonials__star">
-                                  <i class="fa fa-star" aria-hidden="true"></i>
+                          {%- if name != blank or position != blank -%}
+                            <footer>
+                              {%- if image != blank -%}
+                                <span class="testimonials__image-wrapper">
+                                  {%- render 'image',
+                                      image: image,
+                                      loading: 'lazy',
+                                      class: 'testimonials__image',
+                                      size: 'xs'
+                                  -%}
                                 </span>
-                              {%- endfor -%}
-                              {%- for i in (stars_empty..5) -%}
-                                <span class="testimonials__star">
-                                  <i class="fa fa-star-o" aria-hidden="true"></i>
-                                </span>
-                              {%- endfor -%}
-                            </div>
-                          {%- endif -%}
-
-                          {%- if description != blank -%}
-                            <blockquote class="testimonials__blockquote text-medium">
-                              <q class="testimonials__quote bq-content rx-content">
-                                {{- description -}}
-                              </q>
-
-                              {%- if name != blank or position != blank -%}
-                                <cite class="testimonials__cite">
-                                  {%- if name != blank -%}
-                                    {{- name -}}
-                                  {%- endif -%}
-                                  {%- if position != blank -%}
-                                    <small class="testimonials__small">
-                                      {{- position -}}
-                                    </small>
-                                  {%- endif -%}
-                                </cite>
                               {%- endif -%}
-                            </blockquote>
-                          {%- endif -%}
-                        </div>
-                      {%- endif -%}
 
-                      {%- if image != blank -%}
-                        <div class="testimonials__col">
-                          <div class="testimonials__image-wrapper">
-                            {%- render 'image',
-                                image: image,
-                                loading: 'lazy',
-                                class: 'testimonials__image',
-                                size: 'l'
-                            -%}
-                          </div>
-                        </div>
-                      {%- endif -%}
-                    </div>
+                              <cite class="testimonials__cite">
+                                {%- if name != blank -%}
+                                  {{- name -}}
+                                {%- endif -%}
+                                {%- if position != blank -%}
+                                  <small class="testimonials__small">
+                                    {{- position -}}
+                                  </small>
+                                {%- endif -%}
+                              </cite>
+                            </footer>
+                          {%- endif -%}
+                        </blockquote>
+
+                        <a class="testimonials__button button button--outlined button--large" href="{{ button_url }}">{{- button -}}</a>
+                      </div>
+                    {%- endif -%}
               {%- if carousel -%}
                   </div>
                 </div>
@@ -186,28 +161,15 @@
           </div>
 
           {%- if show_navigation -%}
-            <div class="carousel__navigation hidden" aria-label="Carousel navigation" aria-hidden="true">
-              <span class="carousel__btn prev" title="Prev slide">
+            <div class="carousel__navigation hidden" aria-role="Carousel navigation">
+              <span class="carousel__btn prev" aria-label="Prev slide">
                 Previous slide
                 {%- render 'icon-arrow-right-full' -%}
               </span>
-              <span class="carousel__btn next" title="Next slide">
+              <span class="carousel__btn next" aria-label="Next slide">
                 Next slide
                 {%- render 'icon-arrow-right-full' -%}
               </span>
-            </div>
-          {%- endif -%}
-
-          {%- if show_pagination -%}
-            <div class="carousel__pagination hidden" aria-label="Carousel pagination" aria-hidden="true">
-              {%- for block in blocks -%}
-                {%- assign first = forloop.first -%}
-                {%- assign index = forloop.index -%}
-
-                <span class="carousel__dot{% if first %} active{%- endif -%}" data-index="{{- index -}}" title="Jump to slide {{ index }}">
-                  Go to slide {{ index }}
-                </span>
-              {%- endfor -%}
             </div>
           {%- endif -%}
         </div>
@@ -239,29 +201,32 @@
           {
             "value": "two",
             "label": "Color set 2"
-          }
-        ],
-        "default": "one"
-      },
-      {
-        "type": "select",
-        "id": "image_position",
-        "label": "Image position",
-        "options": [
-          {
-            "value": "left",
-            "label": "Left"
           },
           {
-            "value": "right",
-            "label": "Right"
+            "value": "three",
+            "label": "Color set 3"
+          },
+          {
+            "value": "four",
+            "label": "Color set 4"
+          },
+          {
+            "value": "five",
+            "label": "Color set 5"
           }
         ],
-        "default": "right"
+        "default": "three"
       },
       {
-        "type": "header",
-        "content": "Carousel settings"
+        "type": "text",
+        "id": "title",
+        "label": "Title",
+        "default": "What people <br>say about us"
+      },
+      {
+        "type": "image_picker",
+        "id": "image_bg",
+        "label": "Image (optional)"
       },
       {
         "type": "checkbox",
@@ -270,19 +235,28 @@
         "label": "Show navigation buttons"
       },
       {
-        "type": "checkbox",
-        "id": "show_pagination",
-        "default": true,
-        "label": "Show page bullets"
-      },
-      {
-        "type": "number",
-        "id": "timer",
-        "label": "Rotation time",
-        "min": 0,
-        "max": 100,
-        "default": 5,
-        "info": "In seconds. Set to 0 to disable auto rotation"
+        "type": "select",
+        "id": "rounded_corners",
+        "label": "Rounded corners",
+        "options": [
+          {
+            "value": "none",
+            "label": "None"
+          },
+          {
+            "value": "small",
+            "label": "Small"
+          },
+          {
+            "value": "medium",
+            "label": "Medium"
+          },
+          {
+            "value": "large",
+            "label": "Large"
+          }
+        ],
+        "default": "none"
       },
       {
         "type": "header",
@@ -396,21 +370,9 @@
         "name": "Testimonial",
         "settings": [
           {
-            "type": "image_picker",
-            "id": "image",
-            "label": "Image (optional)",
-            "default": "booqable://assets/image-tough-placeholder.png"
-          },
-          {
-            "type": "text",
-            "id": "title",
-            "label": "Title",
-            "default": "Customer review"
-          },
-          {
             "type": "contentEditor",
             "id": "description",
-            "label": "Description",
+            "label": "Content",
             "default": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare."
           },
           {
@@ -426,32 +388,21 @@
             "default": "Position, Company name"
           },
           {
-            "type": "select",
-            "id": "stars",
-            "label": "Stars",
-            "options": [
-              {
-                "value": "1",
-                "label": "1 star"
-              },
-              {
-                "value": "2",
-                "label": "2 stars"
-              },
-              {
-                "value": "3",
-                "label": "3 stars"
-              },
-              {
-                "value": "4",
-                "label": "4 stars"
-              },
-              {
-                "value": "5",
-                "label": "5 stars"
-              }
-            ],
-            "default": "5"
+            "type": "image_picker",
+            "id": "image",
+            "label": "Picture"
+          },
+          {
+            "type": "text",
+            "id": "button",
+            "label": "Button label",
+            "default": "Check review online",
+            "info": "Leave blank to hide the button"
+          },
+          {
+            "type": "url",
+            "id": "button_url",
+            "label": "Button link"
           }
         ]
       }
